syntax = "proto3";
package main;
option go_package = "./;main";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "msg.proto";

message UnaryRequest {
  int32 counter = 1;
}

message UnaryResponse {
  int32 result = 1;
}

message BinaryRequest {
  bytes data = 1;
}

message BinaryResponse {
  bytes data = 1;
}

message StreamingRequest {
  int32 counter = 1;
}

message StreamingResponse {
  int32 result = 1;
}

message HttpGetRequest {
  int32 num_to_increase = 1;
}

message HttpGetResponse {
  int32 result = 1;
}

message HttpPostRequest {
  int32 a = 1;
  PostRequest req = 2;
  int32 c = 3;
}

message PostRequest {
  int32 b = 1;
}

message HttpPostResponse {
  int32 post_result = 1;
}

message HttpPatchRequest {
  int32 a = 1;
  int32 c = 2;
}

message HttpPatchResponse {
  int32 patch_result = 2;
}

message HttpDeleteRequest {
  int32 a = 1;
}

message HTTPGetWithURLSearchParamsRequest {
  int32 a = 1;
  PostRequest post_req = 2;
  repeated int32 c = 3;
  ExternalMessage ext_msg = 4;
}

message HTTPGetWithURLSearchParamsResponse {
  int32 url_search_params_result = 1;
}

message ZeroValueMsg {
  int32 c = 1;
  repeated int32 d = 2;
  bool e = 3;
}

message HTTPGetWithZeroValueURLSearchParamsRequest {
  string a = 1;
  string b = 2;
  ZeroValueMsg zero_value_msg = 3;
}

message HTTPGetWithZeroValueURLSearchParamsResponse {
  string a = 1;
  string b = 2;
  ZeroValueMsg zero_value_msg = 3;
}

message HTTPGetWithPathSegmentsRequest {
  string a = 1;
}

message HTTPGetWithPathSegmentsResponse {
  string a = 1;
}

message HTTPPostWithFieldPathRequest {
  message SubMessage {
    int32 x = 21;
    string nested_value = 22;
  }
  SubMessage y = 23;
}

message HTTPPostWithFieldPathResponse {
  int32 xout = 11;
  string yout = 12;
}

service CounterService {
  rpc Increment(UnaryRequest) returns (UnaryResponse);
  rpc StreamingIncrements(StreamingRequest) returns (stream StreamingResponse);
  rpc FailingIncrement(UnaryRequest) returns (UnaryResponse);
  rpc EchoBinary(BinaryRequest) returns (BinaryResponse);
  rpc HTTPGet(HttpGetRequest) returns (HttpGetResponse) {
    option (google.api.http) = {
      get: "/api/{num_to_increase}"
    };
  }
  rpc HTTPPostWithNestedBodyPath(HttpPostRequest) returns (HttpPostResponse) {
    option (google.api.http) = {
      post: "/post/{a}"
      body: "req"
    };
  }
  rpc HTTPPostWithStarBodyPath(HttpPostRequest) returns (HttpPostResponse) {
    option (google.api.http) = {
      post: "/post/{a}/{c}"
      body: "*"
    };
  }
  rpc HTTPPatch(HttpPatchRequest) returns (HttpPatchResponse) {
    option (google.api.http) = {
      patch: "/patch"
      body: "*"
    };
  }
  rpc HTTPDelete(HttpDeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/delete/{a}"
    };
  }
  rpc ExternalMessage(ExternalRequest) returns (ExternalResponse);
  rpc HTTPGetWithURLSearchParams(HTTPGetWithURLSearchParamsRequest) returns (HTTPGetWithURLSearchParamsResponse) {
    option (google.api.http) = {
      get: "/api/query/{a}"
    };
  }
  rpc HTTPGetWithZeroValueURLSearchParams(HTTPGetWithZeroValueURLSearchParamsRequest) returns (HTTPGetWithZeroValueURLSearchParamsResponse) {
    option (google.api.http) = {
      get: "/path/query"
    };
  }
  rpc HTTPGetWithPathSegments(HTTPGetWithPathSegmentsRequest) returns (HTTPGetWithPathSegmentsResponse) {
    option (google.api.http) = {
      get: "/getsegment/{a=segmented/*}"
    };
  }
  rpc HTTPPostWithFieldPath(HTTPPostWithFieldPathRequest) returns (HTTPPostWithFieldPathResponse) {
    option (google.api.http) = {
      post: "/postpath/{y.nested_value}"
      body: "y"
    };
  }
  rpc HTTPPostWithFieldPathAndSegments(HTTPPostWithFieldPathRequest) returns (HTTPPostWithFieldPathResponse) {
    option (google.api.http) = {
      post: "/postpathsegment/{y.nested_value=segmented/*}"
      body: "y"
    };
  }
}

